# ScatteringOnSpheroidalParticles

./: CMakeLists.txt  README.md  input.txt  main.f90
src/: scattering_functions.f90
src/mathematics/: angle.f90  matrix.f90
src/mathematics/functions/: complex_oblate_swf.f90  complex_prolate_swf.f90  legendre_functions.f90  spheroidal.f90
src/mathematics/pair_integrals/: spherical_integrals.f90  spheroidal_integrals.f90
src/parameters/: constants.f90  regime.f90
src/scattering/: scatterer.f90  wavelength_point.f90
src/scattering/spherical/: spherical_scattering.f90
src/scattering/spheroidal/: spheroidal_indicatrix.f90  spheroidal_initial.f90  spheroidal_scattering.f90  spheroidal_tmatrix.f90
src/utils/: communication.f90  geometry.f90  logging.f90  mfunctions.f90  tuning.f90
testing/: test_barber_tmatrix.f90  test_c_of_n.f90
